// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`control-children-indentation - indent 0 failure 1`] = `
Array [
  Object {
    "message": "Expected indentation of 0, got 4 instead",
    "plugin": "control-children-indentation",
  },
]
`;

exports[`control-children-indentation - indent 0 success 1`] = `Array []`;

exports[`control-children-indentation - indent 4 failure 1`] = `
Array [
  Object {
    "message": "Expected indentation of 4, got 0 instead",
    "plugin": "control-children-indentation",
  },
]
`;

exports[`control-children-indentation - indent 4 success 1`] = `Array []`;
